test/corpus/directives.txt
========================
Import directives, path
========================

import "solidity/workshop/test.sol";

------------------------

(source_file
  (directive
    (import_directive
      (path
        (double_quoted_printable)))))

========================
Import directives, symbol aliases and wildcards
========================

import { hello as hi} from "solidity/test.sol";
import { hello, hi } from "solidity/banana.sol";
import * as test from "solidity/test.sol";

------------------------

(source_file
  (directive
    (import_directive
      (symbol_aliases
        (identifier)
        (identifier))
      (path
        (double_quoted_printable))))
  (directive
    (import_directive
      (symbol_aliases
        (identifier)
        (identifier))
      (path
        (double_quoted_printable))))
  (directive
    (import_directive
      (identifier)
      (path
        (double_quoted_printable)))))
